adds provider tag to api endpoints
